# lab3

./: README.md  pyproject.toml  requirements.txt
src/: benchmarks.py  constants.py  generator_tests.py  main.py  output.py  sequences.py  sorting.py  stack.py  ui.py
tests/: test_benchmarks.py  test_generators.py  test_sequences.py  test_sorting.py  test_stack.py
